bugfix of overflow and transform, a bit of usability

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -5,7 +5,16 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   color: #333;
-  overflow-x: hidden;
+
+  &.blocked {
+    overflow: hidden;
+  }
+}
+
+.mega-wrapper {
+  overflow: hidden;
+  width: 100vw;
+  position: relative;
 }
 
 img {
